@@ -131,6 +131,14 @@ SUBSCRIBE_FORM_SECRET = None
 # test.
 SUBSCRIBE_FORM_MIN_TIME = seconds(5)
 
+# Installation wide ban list.  This is a list, one entry per line, of email
+# addresses and regexp patterns (beginning with ^) which are not allowed to
+# subscribe to any lists in the installation.  This supplements the individual
+# list's ban_list. For example, to ban xxx@aol.com and any @gmail.com address
+# beginning with yyy, set
+# GLOBAL_BAN_LIST = ['xxx@aol.com', '^yyy.*@gmail.com']
+GLOBAL_BAN_LIST = []
+
 # Command that is used to convert text/html parts into plain text.  This
 # should output results to standard output.  %(filename)s will contain the
 # name of the temporary file that the program should operate on.
